--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-attrs==25.3.0
-autopep8==2.3.1
-cattrs==25.1.1
-certifi==2025.4.26
-charset-normalizer==3.4.1
-chess==1.11.2
-Cython==3.0.11
-fastjsonschema==2.21.1
-idna==3.10
-numpy==1.26.4
-pycodestyle==2.13.0
-python-chess==1.999
-requests==2.32.3
-typing_extensions==4.14.1
-urllib3==2.4.0
-zstandard==0.23.0
+# Core ML dependencies
+torch>=2.0.0
+torchvision>=0.15.0
+numpy>=1.24.0
+pillow>=9.0.0
+
+# Chess utilities (for FEN parsing in Blender script)
+chess>=1.10.0
+
+# Note: Blender is required for synthetic rendering but is installed separately.
+# Set BLENDER_PATH environment variable if blender is not in PATH.
